# mcpserver

./: README.md  client.py  mathserver.py  pyproject.toml  requirements.txt  server.py  weather.py
