[project]
name = "mcpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "fastapi>=0.115.14",
    "langchain-groq>=0.3.4",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=0.5.0",
    "mcp>=1.10.1",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "yfinance>=0.2.64",
]
